2020-12-13  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-dump.pk (pk_dump_nonprintable_char): Define.
	(print_ascii): use pk_dump_nonprintable_char.
	* doc/poke.texi (Presentation options for @command{dump}): Doument
	pk_dump_nonprintable_char.

2020-12-13  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Support for non-strict values): Removed as done.

2020-12-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (array_mapper): Set the strict attribute to
	the mapped value.
	(struct_mapper): Likewise.
	* testsuite/poke.map/ass-map-17.pk: Check that the r-value of an
	ass-map keeps the `strict' attribute.
	* testsuite/poke.map/strict-attr-8.pk: New test.
	* testsuite/poke.map/strict-attr-9.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-attrs.def: Define PKL_AST_ATTR_STRICT.
	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Typify attribute
	'strict.
	* libpoke/pkl-gen.c (pkl_gen_ps_op_attr): Generate code for the
	attribute 'strict.
	* testsuite/poke.map/strict-attr-1.pk: New test.
	* testsuite/poke.map/strict-attr-2.pk: Likewise.
	* testsuite/poke.map/strict-attr-3.pk: Likewise.
	* testsuite/poke.map/strict-attr-4.pk: Likewise.
	* testsuite/poke.map/strict-attr-5.pk: Likewise.
	* testsuite/poke.map/strict-attr-6.pk: Likewise.
	* testsuite/poke.map/strict-attr-7.pk: Likewise.
	* doc/poke.texi (Array Attributes): Document the 'strict
	attribute.
	(Non-strict Mapping): Mention the attribute.

2020-12-13  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.map/nsmap-1.pk: New test.
	* testsuite/poke.map/nsmap-2.pk: Likewise.
	* testsuite/poke.map/nsmap-3.pk: Likewise.
	* testsuite/poke.map/nsmap-4.pk: Likewise.

	* libpoke/pkl-ast.h (struct pkl_ast_map): New field `strict_p'.
	(PKL_AST_MAP_STRICT_P): Define.
	* libpoke/pkl-ast.c (pkl_ast_make_map): Get a new argument for
	strict_p.
	(pkl_ast_print_1): Print new attribute strict_p.
	* libpoke/pkl-lex.l: Handle @! tokens.