@@ -1350,6 +1350,7 @@ EXTRA_DIST = \
   poke.pkl/printf-23.pk \
   poke.pkl/printf-24.pk \
   poke.pkl/printf-25.pk \
+  poke.pkl/printf-26.pk \
   poke.pkl/printf-binary-1.pk \
   poke.pkl/printf-binary-2.pk \
   poke.pkl/printf-binary-3.pk \
